--- a/Presentation/Pages/Shared/_Layout.cshtml
+++ b/Presentation/Pages/Shared/_Layout.cshtml
@@ -182,7 +182,69 @@
             </div>
         </div>
         <div class="row">
-
+            <div class="col-md-4">
+                <label>Num</label>
+                <div class="form-group">
+                    <input type="text" class="form-control" />
+                </div>
+            </div>
+            <div class="col-md-4">
+                <label>Street</label>
+                <div class="form-group">
+                    <input type="text" class="form-control" />
+                </div>
+            </div>
+            <div class="col-md-4">
+                <label>District</label>
+                <div class="form-group">
+                    <input type="text" class="form-control" />
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <label>City</label>
+                <div class="form-group">
+                    <input type="text" class="form-control" />
+                </div>
+            </div>
+            <div class="col-md-4">
+                <label>State</label>
+                <div class="form-group">
+                    <input type="text" class="form-control" />
+                </div>
+            </div>
+            <div class="col-md-4">
+                <label>Country</label>
+                <div class="form-group">
+                    <select id="items"  name="items" type="text" class="form-control country"  ></select>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="heading  col-md-8">
+                <h3>Your Account</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <label>Username</label>
+                <div class="form-group">
+                    <input type="text" class="form-control" />
+                </div>
+            </div>
+            <div class="col-md-4">
+                <label>Password</label>
+                <div class="form-group">
+                    <input type="password" class="form-control" />
+                </div>
+            </div>
+            <div class="col-md-4">
+                <label>Re-password</label>
+                <div class="form-group">
+                    <input type="password" class="form-control"  />
+                </div>
+            </div>
         </div>
     </form>
     
