--- a/Presentation/Pages/Shared/_LayoutAdmin.cshtml
+++ b/Presentation/Pages/Shared/_LayoutAdmin.cshtml
@@ -153,7 +153,7 @@
     <!-- Plugin js for this page-->
     <script src="~/js/jquery-ui.js"></script>
     <!-- <script src="~/js/bootstrap-datepicker.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.min.js"></script> -->
     <script src="~/assets/js/shared/jquery-datetimepicker.js"></script>
     <!-- End plugin js for this page-->
     <!-- inject:js -->
