--- a/Presentation/Pages/Shared/_Layout.cshtml
+++ b/Presentation/Pages/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="~/css/aos.css">
 
     <link rel="stylesheet" href="~/css/ionicons.min.css">
-    <link rel="stylesheet" href="~/css/bootstrap-datepicker.css">
+    <!-- <link rel="stylesheet" href="~/css/bootstrap-datepicker.css"> -->
     <link rel="stylesheet" href="~/css/jquery.timepicker.css">
 
     <link rel="stylesheet" href="~/css/jquery-ui.css">
@@ -260,8 +260,8 @@
     <script src="~/js/jquery.magnific-popup.min.js"></script>
     <script src="~/js/aos.js"></script>
     <script src="~/js/jquery.animateNumber.min.js"></script>
-    <script src="~/js/bootstrap-datepicker.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.min.js"></script>
+    <!-- <script src="~/js/bootstrap-datepicker.js"></script> -->
+    <script src="~/js/jquery.timepicker.min.js"></script>
     <script src="~/js/scrollax.min.js"></script>
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script> -->
     <!-- <script src="~/js/google-map.js"></script> -->
@@ -397,6 +397,9 @@
 		});
     })(jQuery);
     </script>
+    @section scripts{
+        @await Html.PartialAsync("_ValidationScriptsPartial")
+    }
     @RenderSection("Scripts", required: false)
 </body>
 </html>
