--- a/Presentation/Pages/Admin/Flight.cshtml
+++ b/Presentation/Pages/Admin/Flight.cshtml
@@ -200,7 +200,7 @@
               
             </div>
 
-            <button id="btsubmitCreateFlight" type="submit" class="btn btn-success mr-2" ><b>Create</b></button>
+            <button id="btsubmitCreateFlight"  class="btn btn-success mr-2" ><b>Create</b></button>
             <button class="btn btn-light" data-dismiss="modal"><b>Cancel</b></button>
           </form>
 		    </div>
