--- a/Presentation/Pages/Admin/Flight.cshtml
+++ b/Presentation/Pages/Admin/Flight.cshtml
@@ -190,7 +190,7 @@
                   </select>
                 </div>
                 <div class="col-md-4">
-                  <input id="CreateFlight-depdate1" type="text" class="form-control CreateFlight-depdate choose_date" />
+                  <input id="CreateFlight-depdate1" type="text" class="form-control CreateFlight-depdate choose_date" required/>
                 </div>
                 <div class="col-md-4">
                   <input id="CreateFlight-arrdate1" type="text" class="form-control CreateFlight-arrdate choose_date" disabled/>
