--- a/Presentation/Pages/Admin/Flight.cshtml
+++ b/Presentation/Pages/Admin/Flight.cshtml
@@ -4,16 +4,26 @@
   Layout = "_LayoutAdmin";
 	ViewData["Title"] = "Admin Page";
 }
+@using Microsoft.AspNetCore.Http
+@{
+  if(HttpContext.Session.GetString("username") == null)
+  {
+    Response.Redirect("Index");
+  }
+  string job = HttpContext.Session.GetString("job");
+}
 <div class="main-panel">
   <div class="content-wrapper">
      <!-- row button create -->
-    <div class="row">
-      <div class="col-lg-12 stretch-card">
-        <a href="#CreateFlightForm" data-toggle="modal" id="btCreateFlight" type="button" class="btn  btn-primary btn-lg btn-inverse-*">
-          <i class="mdi mdi-upload"></i>Create Flight
-        </a>
+    @if(job =="003"){
+      <div class="row">
+        <div class="col-lg-12 stretch-card">
+          <a href="#CreateFlightForm" data-toggle="modal" id="btCreateFlight" type="button" class="btn  btn-primary btn-lg btn-inverse-*">
+            <i class="mdi mdi-upload"></i>Create Flight
+          </a>
+        </div>
       </div>
-    </div>
+    }
     <!-- row table -->
     <div class="row">
       <div class="col-lg-12 stretch-card">
@@ -49,8 +59,11 @@
                   <td>@item.PlaneId</td>
                   <td> 
                     <button  id="@item.FlightId" data-toggle="modal" data-target="#DetailFlightForm"  type="button" class="btn btn-info btn-sm  btn-rounded DetailFlight"><i class="fa fa-vcard-o"></i></button>
-                    <button  id="@item.FlightId" data-toggle="modal" data-target="#EditFlightForm"  type="button" class="btn btn-dark btn-sm  btn-rounded EditFlight"><i class="fa fa-cog"></i></button>
-                    <button  id="@item.FlightId" type="button" class="btn btn-danger btn-sm  btn-rounded DeleteFlight"><i class="fa fa-times" ></i></button>
+                    @if(job =="003"){
+                      <button  id="@item.FlightId" data-toggle="modal" data-target="#EditFlightForm"  type="button" class="btn btn-dark btn-sm  btn-rounded EditFlight"><i class="fa fa-cog"></i></button>
+                      <button  id="@item.FlightId" type="button" class="btn btn-danger btn-sm  btn-rounded DeleteFlight"><i class="fa fa-times" ></i></button>
+                    }
+                  
                   </td>
                 </tr>
               }
