--- a/Presentation/Pages/Admin/Flight.cshtml
+++ b/Presentation/Pages/Admin/Flight.cshtml
@@ -252,7 +252,7 @@
             </div>
 		    <div class="model-body" style="margin: 15px">
           <form class="form-sample">
-            <input id="EditFlight-flightid" type="text" class="form-control" />
+            <input id="EditFlight-flightid" type="text" class="form-control" hidden/>
 				    <p style="font-weight:600" class="card-description"> Flight info </p>
             <div class="row">
               <div class="col-md-6">
@@ -282,7 +282,7 @@
               </div>
             </div> 
             <p style="font-weight:600" class="card-description"> Flight Detail </p>
-              <input id="EditFlight-number" type="text" class="form-control" value="1" />
+              <input id="EditFlight-number" type="text" class="form-control" value="1" hidden/>
               <div class="row">
                 <div class="col-md-4">
                   <button  id="EditFlight-btadd" type="button" class="btn  btn-primary btn-md">
