--- a/Presentation/Pages/Admin/Route.cshtml
+++ b/Presentation/Pages/Admin/Route.cshtml
@@ -58,7 +58,7 @@
                         @item.Destination
                     </td>
                     <td>
-                        @item.FlightTime
+                        @item.FlightTime.toString()
                     </td>
                     <td>
                         @item.Status
