--- a/Presentation/Pages/Admin/Route.cshtml
+++ b/Presentation/Pages/Admin/Route.cshtml
@@ -52,13 +52,13 @@
                         @item.RouteId
                     </td>
                     <td>
-                        @item.Origin
+                        @item.Origin_name
                     </td>
                     <td>
-                        @item.Destination
+                        @item.Destination_name
                     </td>
                     <td>
-                        @item.FlightTime.toString()
+                        @item.FlightTime
                     </td>
                     <td>
                         @item.Status
